--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -15,12 +10,8 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -28,11 +19,42 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Nav-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+}
+
+.Nav {
+  display: flex;
+  justify-content: flex-start;
+  padding-right: 2vw;
+}
+
+.Logo-wrapper {
+  display: flex;
+  width: 100vw;
+  justify-content: flex-start;
+  margin-left: 2vw;
+}
+
+ul {
+  list-style: none;
+}
+
+.Image-gallery {
+  display: flex;
+  width: 100vw;
+  max-height: 100vh;
+}
+
+.Gallery-list {
+  margin: 0;
+  padding: 0;
+}
+
+.responsive {
+  width: 100vw;
+  height: auto;
+  object-fit: cover;
 }
