--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,12 @@
   text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   display: flex;
   align-items: center;
   color: white;
+  min-height: 6vh;
 }
 
 .App-link {
@@ -29,6 +24,7 @@
   display: flex;
   justify-content: flex-start;
   padding-right: 2vw;
+  margin: 0;
 }
 
 .Logo-wrapper {
