--- a/src/App.css
+++ b/src/App.css
@@ -69,23 +69,28 @@ a:hover {
   overflow: hidden;
   width: 100%;
   height: 100%;
+  z-index: 0;
 }
 
 #root > div {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  margin-top: 10vh;
   will-change: transform;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 }
 
 #root > div > div {
   background-color: white;
-  background-size: auto 85%;
+  background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: center center;
+  border-style: solid;
+  border-width: 10px;
+  border-color: white;
   width: 45vh;
   max-width: 300px;
   height: 85vh;
