Added End of Deck UI Buttons

--- a/src/App.css
+++ b/src/App.css
@@ -102,13 +102,22 @@ a:hover {
 }
 
 .DeckButtonsWrapper {
-  width: 100vw;
-  height: 42vh;
+  width: 100vw !important;
+  height: 42vh !important;
+  border: none !important;
+  border-radius: none !important;
+  background-color: transparent !important;
+  display: flex;
+  box-shadow: none !important;
+  justify-content: center;
 }
 
 .DeckButtons {
-  width: 45vw !important;
-  height: 450px !important;
-  background-color: white !important;
+  width: 25vw !important;
+  height: 250px !important;
+  background-color: transparent !important;
   border: none !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
