--- a/src/App.css
+++ b/src/App.css
@@ -149,3 +149,10 @@ a:hover {
   height: 100%;
   opacity: 0.8;
 }
+
+.Title-display-wrapper {
+  display: flex;
+  flex-direction: column;
+  position: absolute !important;
+  margin-top: 25px !important;
+}
