--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,9 @@ a:hover {
   padding-left: 7%;
   padding-right: 7%;
   margin-top: 10px;
+  height: 0 !important;
+  background-color: transparent !important;
+  border-color: transparent !important;
 }
 
 .Bed-icon {
