--- a/src/App.css
+++ b/src/App.css
@@ -89,16 +89,14 @@ a:hover {
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: center center;
-  border-style: solid;
-  border-width: 10px;
-  border-color: white;
   width: 100vw;
   max-width: 420px;
   height: 50vh;
   max-height: 570px;
   will-change: transform;
-  border-radius: 10px;
-  box-shadow: 0 12.5px 33px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
+  border-radius: 2px;
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.52); 
+  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.52);
 }
 
 #root > button {
