--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   width: 100vw;
   justify-content: flex-start;
   margin-left: 2vw;
+  align-items: center;
 }
 
 ul {
@@ -74,14 +75,13 @@ a:hover {
 
 #root > div {
   position: absolute;
+  margin-top: 8px;
   width: 100%;
-  height: 110vh;
   will-change: transform;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 1;
-  margin-top: -85px;
 }
 
 #root > div > div {
@@ -173,8 +173,7 @@ a:hover {
   justify-content: space-between;
   padding-left: 7%;
   padding-right: 7%;
-  margin-top: 10px;
-  height: 0 !important;
+  margin-left: auto;
   background-color: transparent !important;
   border-color: transparent !important;
 }
@@ -182,43 +181,43 @@ a:hover {
 .Bed-icon {
   width: 15px;
   height: 15px;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   border-radius: 99px;
-  margin-bottom: 8px;
   margin-right: 5px;
 }
 
 .Bath-icon {
   width: 15px;
   height: 15px;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   border-radius: 99px;
-  margin-bottom: 8px;
   margin-right: 5px;
 }
 
 .Sqft-icon {
   width: 15px;
   height: 15px;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   border-radius: 99px;
-  margin-bottom: 8px;
   margin-right: 5px;
 }
 
 .Beds {
   display: flex;
   align-items: center;
+  margin-right: 7px;
 }
 
 .Baths {
   display: flex;
   align-items: center;
+  margin-right: 7px;
 }
 
 .Sqft {
   display: flex;
   align-items: center;
+  margin-right: 7px;
 }
 
 .Stats-h4 {
