Created Modal Toggle

--- a/src/App.css
+++ b/src/App.css
@@ -286,4 +286,27 @@ a:hover {
   background-color: #838383;
   z-index: 10;
   top: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-image {
+  transform: rotate(90deg);
+  width: 100vw;
+  height: 100vw;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+button.view-button {
+  width: 15vw;
+  height: 15vw;
+  opacity: 0.4;
+  border-radius: 50px;
+  position: absolute;
+  top: 60px;
+  right: 17px;
+  z-index: 10;
+  border: none;
 }
