--- a/src/App.css
+++ b/src/App.css
@@ -271,7 +271,7 @@ a:hover {
 .modal-wrapper {
   display: flex;
   width: 100vw;
-  height: calc(100vh - 45px);
+  height: 100vh;
   position: absolute;
   background-color: #000000c0;
   z-index: 10;
