--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ a:hover {
 
 .info-box-wrapper {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .info-box {
@@ -278,11 +278,13 @@ a:hover {
 .modal-inner-wrapper {
   height: 100vh;
   width: 100vw;
+  overflow-y: auto;
 }
 
 .modal-wrapper {
   display: flex;
   width: 100vw;
+  height: 100%;
   position: absolute;
   background-color: #000000c0;
   z-index: 10;
@@ -290,7 +292,7 @@ a:hover {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .modal-image {
@@ -332,4 +334,17 @@ button.next-button {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.bottom-flag {
+  width: 100vw;
+  height: 25px;
+  margin-bottom: 10vh;
+}
+
+.bottom-flag-wrapper {
+  height: 50vh;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
 }
