--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,8 @@ a:hover {
 
 .info-box-wrapper {
   width: 100%;
+  background: rgb(0, 0, 0);
+  border-bottom:  1px solid black;
   /* height: 100%; */
 }
 
@@ -278,7 +280,7 @@ a:hover {
 .modal-inner-wrapper {
   height: 100%;
   width: 100vw;
-  background-color: #000000c0;
+  background: rgb(41,41,41);
   /* overflow-y: auto; */
 }
 
@@ -298,10 +300,11 @@ a:hover {
 .modal-image {
   width: 100vw;
   height: 275px;
-  margin-bottom: 1vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  border-bottom: 7px solid rgb(8, 8, 8);
+
 }
 
 button.view-button {
@@ -338,4 +341,14 @@ button.next-button {
 
 .bottom-bumper {
   height: 100vh;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgba(41,41,41,0.8144215210355987) 29%, rgba(41,41,41,0) 54%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.bumper-bottom {
+  height: 25px;
+  margin-bottom: 5vh;
 }
