--- a/src/App.css
+++ b/src/App.css
@@ -75,12 +75,12 @@ a:hover {
 
 #root > div {
   position: absolute;
-  margin-top: 0px;
+  margin-top: 9px;
   width: 100%;
   will-change: transform;
   display: flex;
   align-items: center;
-  justify-content: center;
+  flex-direction: column-reverse;
   z-index: 1;
 }
 
@@ -143,9 +143,20 @@ a:hover {
   border-radius: 0;
   width: 100vw !important;
   padding: 18px;
+  padding-bottom: 0;
   padding-top: 1px;
   margin-top: unset;
   bottom: 8vh;
+  align-items: flex-end !important;
+}
+
+.button-box {
+  border-radius: 0;
+  width: 100vw !important;
+  padding-right: 10vw;
+  margin-top: unset;
+  bottom: 5vh;
+  align-items: flex-end !important;
 }
 
 .cta-wrapper {
@@ -248,24 +259,32 @@ a:hover {
 
 .tag-wrapper {
   display: flex;
+  position: fixed;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   /* max-height: 450px;
   height: 65vh; */
   overflow: scroll;
+  width: 75vw !important;
+  height: 100vh;
+  overflow-y: scroll;
+  transition: transform .3s;
+  transition-timing-function: ease-in-out;
 }
 
 .homestyle-tag {
-  width: 100%;
+  width: 100% !important;
   padding: 17px;
-  background-color: rgb(70, 70, 70);
+  background-color: transparent !important;
+  height: 1vh !important;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   margin-top: 4px;
   margin-bottom: 4px;
   color: white;
-  text-shadow: 1px 2px rgb(48, 48, 48);
+  letter-spacing: -0.4px;
+  box-shadow: none !important;
 }
 
 .tag {
@@ -326,9 +345,27 @@ button.view-button {
 
 button.next-button {
   border: none;
-  width: 90vw;
+  width: 60px;
   height: 60px;
+  border-radius: 30px;
   background-color: white;
+  font-size: 26px;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  align-items: center;
+}
+
+button.change-style-button {
+  border: none;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  background-color: white;
+  font-size: 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cta {
@@ -378,4 +415,28 @@ button.small-like-button {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+
+.trails-main {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.trails-text {
+  position: relative;
+  width: 100%;
+  height: 90px;
+  line-height: 80px;
+  color: black;
+  font-size: 5em;
+  font-weight: 800;
+  letter-spacing: -1px;
+  will-change: transform, opacity;
+  overflow: hidden;
 }
