--- a/src/App.css
+++ b/src/App.css
@@ -446,3 +446,13 @@ button.small-like-button {
   will-change: transform, opacity;
   overflow: hidden;
 }
+
+.Header-content {
+  padding-left: 5px;
+  padding-bottom: 2px;
+  line-height: 17px;
+}
+
+.Header-content-style {
+  font-size: 12px;
+}
